--- a/index.html
+++ b/index.html
@@ -15,34 +15,14 @@
   </head>
 
   <body class="bg-light">
-    <div class="container mb-3">
+    <div class="container">
       <div class = "row"> new clock </div>
-      <div class="col-md-3">
-        <div class="card text-white">
-        <div class="card-body bg-success text-center">
-        <p class="card-title">
-        <a><span class="badge nhours"></span></a> :
-        <a><span class="badge nmin"></span></a> :
-        <a><span class="badge nsec"></span></a>
-        </p>
-        </div>
-        </div>
-      </div>
+      <div class = "nclock">  </div>
     </div>
 
     <div class="container mb-3">
       <div class = "row"> old clock </div>
-      <div class="col-md-3">
-        <div class="card text-white">
-        <div class="card-body bg-info text-center">
-        <p class="card-title">
-        <a><span class="badge hours"></span></a> :
-        <a><span class="badge min"></span></a> :
-        <a><span class="badge sec"></span></a>
-        </p>
-        </div>
-        </div>
-      </div>
+      <div class = "oclock">  </div>
     </div>
 
     <!-- Bootstrap core JavaScript
