--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="description" content="">
     <meta name="author" content="awada">
 
-    <title>wordle guesser</title>
-    <meta name="description" content="wordle guessing engine">
+    <title>perk time</title>
+    <meta name="description" content="perk time">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
